tests/NormalTests/paczka1/fuzzy1/49208882.err
Error in line 11: k8FzMvdv42Z S733 77,6
Error in line 8: 4xia A977 44,1
Error in line 24: S271 S482 43,5
Error in line 30: 4xia S271 67,9
Error in line 33: 4xia S733 21,8
